--- a/.github/workflows/multi-runner.yml
+++ b/.github/workflows/multi-runner.yml
@@ -1,10 +1,15 @@
-name: Hello World
-
+name: Runner Comparison
 on: [workflow_dispatch]
-
 jobs:
-  hello:
+  linux:
     runs-on: ubuntu-latest
     steps:
-      - name: Print message
-        run: echo "Hello GitHub Actions!"
+      - run: uname -a
+  windows:
+    runs-on: windows-latest
+    steps:
+      - run: systeminfo
+  mac:
+    runs-on: macos-latest
+    steps:
+      - run: sw_vers
